adding example project to create the console